# mobman_moveit_config

./: CMakeLists.txt  README.md  doc.md  package.xml
config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mobile_manipulator.ros2_control.xacro  mobile_manipulator.srdf  mobile_manipulator.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
launch/: demo.launch.py  mobman_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
scripts/: test_mobman_moveit.py
